--- a/package.json
+++ b/package.json
@@ -8,22 +8,33 @@
     "build": "node build.js"
   },
   "dependencies": {
-    "rollup-plugin-prettier": "^0.6.0",
-    "three-full": "^11.3.2"
+    "three-full": "16.0.1"
   },
   "devDependencies": {
     "fs-extra": "^7.0.1",
     "rollup": "^0.67.1",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-terser": "^3.0.0"
+    "rollup-plugin-terser": "^3.0.0",
+    "rollup-plugin-prettier": "^0.6.0"
   },
   "files": [
     "src/*",
     "dist/*"
   ],
-  "browser": "./dist/browser/three-cone.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maximeq/three-js-cone.git"
+  },
+  "keywords": [
+    "threejs"
+  ],
+  "browser": "./dist/browser/three-js-cone.js",
   "author": "Maxime Quiblier <maximequiblier@gmail.com>",
   "license": "MIT",
-  "hash": "cbb66061ffd05bc5f6673756895b3f6f03e7202a"
+  "hash": "cbb66061ffd05bc5f6673756895b3f6f03e7202a",
+  "bugs": {
+    "url": "https://github.com/maximeq/three-js-cone/issues"
+  },
+  "homepage": "https://github.com/maximeq/three-js-cone#readme"
 }
